[package]
name = "radio-dj2"
version = "0.1.0"
authors = ["Ingolf Wagner <contact@ingolf-wagner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-simple-binding = "^2.15.0"
libpulse-binding = "^2.15.0"
minimp3 = "^0.3.5"
