[package]
name = "radio-dj2"
version = "0.1.0"
authors = ["Ingolf Wagner <contact@ingolf-wagner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-simple-binding = "^2.15.0"
libpulse-binding = "^2.15.0"
minimp3 = "^0.3.5"
mockall = "^0.6.0"
serde = { version = "^1.0.105" , features = ["derive"] }
serde_json = "^1.0.48"
aubio-rs = "^0.1.2"
simple-error = "^0.2.1"